--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span style="--i:2" data-text="The Future of the money">The Future of the money</span>
                 <span style="--i:1" data-text="New way to live your finances">New way to live your finances</span>
             </h2>
-            <p>We are not just a bank. We are the evolution of how you understand and use your money.
+            <p>We are not just a bank. We are the evolution of how you feel and use your money.
 </p>
             <div class="btn-sci">
         <a href="#" class="btn">Save Contact</a>
@@ -55,6 +55,9 @@
           </a>
           <a href="https://instagram.com/bank.dv" target="_blank">
             <i class='bx bxl-instagram'></i>
+          </a>
+          <a href="https://www.facebook.com/profile.php?id=61579665224538">
+            <i class='bx bxl-facebook'></i>
           </a>
         </div>
             </div>
@@ -73,42 +76,40 @@
         <img src="assets/clientedyvbank.png" alt="profile" />
       </div>
       <div class="about-content">
-        <h2 class="heading">About <span class="bg-gradient-1">Us</span></h2>
+        <h2 class="heading" <span class="bg-gradient-1">Somos</span></h2>
         <p>
-          A closer and more agile digital banking experience. Financial solutions designed for your real growth. A platform where security and innovation meet.
+          un equipo que trabaja constantemente en la innovación de la banca digital, haciendo que tu dinero crezca con solidez respaldado en la estrategia inmobiliaria.
         </p>
         <a href="#contacto">
-          <button class="btn">Contàctame</button>
+          <button class="btn">Contact us</button>
         </a>
       </div>
     </section>
 
     <section id="portfolio" class="projects">
 
-  <h2 class="heading">About <span class="bg-gradient-1">D&amp;V Bank</span></h2>
+  <h2 class="heading">Te <span class="bg-gradient-1">Brindamos</span></h2>
 
       <div class="projects-box">
 
         <div class="project-card">
-          <img src="/assets/banner1.webp" alt="logo">
-          <h3>An exclusive experience</h3>
+          <img src="/assets/1.png" alt="logo">
+          <h3>Préstamos ágiles para tu solidez inmobiliaria </h3>
           <p>
-            You are among the first to discover what will transform your relationship with your money.
+            accede a crédito rápido y confiable para construir tu patrimonio.
           </p>
         </div>
         <div class="project-card">
-          <img src="/assets/banner2.webp" alt="eco">
-          <h3>What everyone will soon want to discover…</h3>
+          <img src="/assets/2.png" alt="eco">
+          <h3>Envíos versátiles a tus seres queridos</h3>
           <p>
-            You have access before anyone else. Get ready for a launch that will mark a before and after in the financial world.
-          </p>
+            envía dinero de forma sencilla y flexible, sin complicaciones.
         </div>
         <div class="project-card">
-            <img src="/assets/banner3.webp" alt="solutions">
-            <h3>What's next?</h3>
+            <img src="/assets/3v2.png" alt="solutions">
+            <h3>Transacciones rápidas y seguras </h3>
             <p>
-              Stay connected. Very soon you will receive exclusive information on how to access the new era of digital banking with D&V Bank.
-            </p>
+             realiza tus operaciones con total confianza y eficiencia.
         </div>
 
 
