--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </p>
         </div>
         <div class="project-card">
-          <img src="/assets/2.png" alt="eco">
+          <img src="/assets/2..png" alt="eco">
           <h3>Envíos versátiles a tus seres queridos</h3>
           <p>
             envía dinero de forma sencilla y flexible, sin complicaciones.
