--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <section class="about" id="about">
       <div class="about-img">
-        <img src="assets/clientedyvbank.png" alt="profile" />
+        <img src="assets/clientedyvbankv2.png" alt="profile" />
       </div>
       <div class="about-content">
         <h2 class="heading" data-i18n="about_title">About <span class="bg-gradient-1">Us</span></h2>
@@ -206,16 +206,16 @@ const translations = {
     home_span2: "New way to live your finances",
     home_desc: "We are not just a bank. We are the evolution of how you understand and use your money.",
     home_save_contact: "Save Contact",
-    about_title: "About <span class='bg-gradient-1'>Us</span>",
-    about_desc: "A closer and more agile digital banking experience. Financial solutions designed for your real growth. A platform where security and innovation meet.",
+    about_title: "We <span class='bg-gradient-1'>Are</span>",
+    about_desc: "a team constantly working on the innovation of digital banking, helping your money grow with strength and stability, backed by real estate strategy.",
     about_btn: "Contact me",
-    projects_title: "About <span class='bg-gradient-1'>D&V Bank</span>",
-    project1_title: "An exclusive experience",
-    project1_desc: "You are among the first to discover what will transform your relationship with your money.",
-    project2_title: "What everyone will soon want to discover…",
-    project2_desc: "You have access before anyone else. Get ready for a launch that will mark a before and after in the financial world.",
-    project3_title: "What's next?",
-    project3_desc: "Stay connected. Very soon you will receive exclusive information on how to access the new era of digital banking with D&V Bank.",
+    projects_title: "We <span class='bg-gradient-1'>Offer</span>",
+    project1_title: "Agile loans for your real estate growth",
+    project1_desc: "Access fast and reliable credit to build your wealth.",
+    project2_title: "Versatile transfers to your loved ones",
+    project2_desc: "Send money easily and flexibly, without complications",
+    project3_title: "Fast and secure transactions.",
+    project3_desc: "Carry out your operations with complete confidence and efficiency.",
     services_title: "Solutions",
     service1_title: "Digital Banking",
     service1_desc: "Access your money and manage your finances quickly and securely from anywhere.",
@@ -250,12 +250,12 @@ const translations = {
     about_desc: "Una experiencia bancaria digital más cercana y ágil. Soluciones financieras diseñadas para tu crecimiento real. Una plataforma donde la seguridad y la innovación se encuentran.",
     about_btn: "Contáctame",
     projects_title: "Te <span class='bg-gradient-1'>Brindamos</span>",
-    project1_title: "Una experiencia exclusiva",
-    project1_desc: "Eres de los primeros en descubrir lo que transformará tu relación con tu dinero.",
-    project2_title: "Lo que todos pronto querrán descubrir…",
-    project2_desc: "Tienes acceso antes que nadie. Prepárate para un lanzamiento que marcará un antes y un después en el mundo financiero.",
-    project3_title: "¿Qué sigue?",
-    project3_desc: "Mantente conectado. Muy pronto recibirás información exclusiva sobre cómo acceder a la nueva era de la banca digital con D&V Bank.",
+    project1_title: "Préstamos ágiles para tu solidez inmobiliaria ",
+    project1_desc: "accede a crédito rápido y confiable para construir tu patrimonio.",
+    project2_title: "Envíos versátiles a tus seres queridos ",
+    project2_desc: "Envía dinero de manera fácil y flexible, sin complicaciones.",
+    project3_title: "Transacciones rápidas y seguras.",
+    project3_desc: "Realiza tus operaciones con total confianza y eficiencia.",
     services_title: "Soluciones",
     service1_title: "Banca Digital",
     service1_desc: "Accede a tu dinero y gestiona tus finanzas de forma rápida y segura desde cualquier lugar.",
