--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </p>
         </div>
         <div class="project-card">
-            <img src="/assets/3.png" alt="solutions">
+            <img src="/assets/3v2.png" alt="solutions">
             <h3 data-i18n="project3_title">What's next?</h3>
             <p data-i18n="project3_desc">
               Stay connected. Very soon you will receive exclusive information on how to access the new era of digital banking with D&V Bank.
